Se creo un boton llamado Alert

--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -10,4 +10,9 @@
       <ion-title size="large">inicio</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-button>
+    Alert
+  </ion-button>
+  
 </ion-content>
