--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -14,5 +14,8 @@
   <ion-button routerLink="/alert">
     Alert
   </ion-button>
-  
+  <ion-button routerLink="/action-sheet">
+    Action Sheet
+  </ion-button>
+
 </ion-content>
